fix class not found error